web: fix modal to show left-aligned text

--- a/risteys_elixir/assets/css/tailwind.css
+++ b/risteys_elixir/assets/css/tailwind.css
@@ -897,7 +897,6 @@ input[type=radio]:checked+label {
 [role=dialog] article {
     overflow-y: scroll;
     max-height: 90%;
-    text-align: center;
 }
 
 [role=dialog] .bottom {
